--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -102,7 +102,7 @@
               (mouseover)="onMouseOver(room.roomId, dayObj, $event)"
               (mouseup)="onMouseUp(dayObj, $event)" class="cell"
               [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, dayObj) ? 'auto' : 'none' }"
-              data-bs-toggle="tooltip" data-bs-placement="bottom"  
+              data-bs-toggle="tooltip" data-bs-placement="top"  
               [title]="getTooltipForCell(room.roomId, dayObj)"
             >
               <span *ngIf="hasReservation(room.roomId, dayObj)" >
